# universal-downloader

./: .gitignore  .prettierignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  requirements-docs.txt  tsconfig.base.json  turbo.json  vercel.json
.changeset/: README.md  config.json  initial-release.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci-api.yml  ci-desktop.yml  ci-e2e.yml  ci-mobile.yml  ci-web.yml  docs.yml  release.yml  storybook.yml
PLAN/: index.html
api/: index.html  swagger-0a756a65.html
apps/api/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: __init__.py  errors.py  logging_config.py  main.py  security.py  settings.py
apps/api/app/models/: __init__.py  api_models.py
apps/api/app/routers/: __init__.py  jobs.py  meta.py  probe.py
apps/api/app/services/: __init__.py  cleanup.py  db.py  ffmpeg_helpers.py  file_models.py  file_router.py  file_store.py  format_helpers.py  job_engine.py  signed_urls.py  sse_bus.py  state_machine.py  worker.py  ytdlp_adapter.py
apps/api/app/utils/: __init__.py  site_detection.py
apps/api/scripts/: dev.ps1  dev.sh  worker.ps1  worker.sh
apps/desktop/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  sidecar.rs
apps/mobile/: .gitattributes  .gitignore  App.tsx  README.md  app.json  jest.config.js  jest.setup.js  metro.config.js  package.json  tsconfig.json
apps/web/: .env.example  .vercelignore  CHANGELOG.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
architecture/: index.html
contributing/: index.html
docs/: PLAN.md  api.md  architecture.md  contributing.md  getting-started.md  index.md  operations.md  responsible-use.md  security.md  self-host.md
getting-started/: index.html
infra/ci/: desktop-notes.md  e2e-notes.md  mobile-notes.md  release-notes.md  storybook-notes.md
infra/docker/: .dockerignore  api.Dockerfile  compose.yml
infra/tauri-sidecars/: README.md  fetch.ps1  fetch.sh
infra/vercel/: project.json.example
operations/: index.html
responsible-use/: index.html
scripts/: release-tag.sh
search/: search_index.json
security/: index.html
self-host/: index.html
storybook/: iframe.html  project.json
(+157 files in other folders)
